# shallow

./: .gitignore  CMakeLists.txt  README.md
include/: Board.h  CapsGenerator.h  ChecksGenerator.h  EscapeGenerator.h  EvalCoefficients.h  Evaluator.h  Field.h  Figure.h  FigureDirs.h  HashTable.h  Helpers.h  History.h  Move.h  MovesGenerator.h  MovesTable.h  SpecialCases.h  Thinking.h  UsualGenerator.h  engine.h  fpos.h  globals.h  kpk.h  magicbb.h  minidump.cpp  minidump.h  processor.h  shallow.h  xalgorithm.h  xallocator.h  xbitmath.h  xboard.h  xcallback.h  xcmdqueue.h  xcommand.h  xcommands.h  xcommon.h  xindex.h  xinput.h  xlist.h  xoptimize.h  (+5 more)
source/: .Evaluator.cpp.swp  Board.cpp  CapsGenerator.cpp  CheckDetector.cpp  ChecksGenerator.cpp  EscapeGenerator.cpp  EvalCoefficients.cpp  EvalFigures.cpp  EvalKing.cpp  EvalMobility.cpp  Evaluator.cpp  FastGenerator.cpp  Figure.cpp  FigureDirs.cpp  Helpers.cpp  History.cpp  MoveMaker.cpp  MovesGenerator.cpp  MovesTable.cpp  SpecialCases.cpp  Thinking.cpp  UsualGenerator.cpp  engine.cpp  fpos.cpp  globals.cpp  kpk.cpp  magicbb.cpp  processor.cpp  psq_table.cpp  search.cpp  see.cpp  shallow.cpp  verify.cpp  xbitmath.cpp  xboard.cpp  xcallback.cpp  xcmdinput.cpp  xcommand.cpp  xcommon.cpp  xinput.cpp  (+5 more)
